live server added

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "emeraldwalk.RunOnSave"
+        "emeraldwalk.runonsave",
+        "ritwickdey.LiveServer"
     ]
 }
