added multiple locale support

--- a/src/settings.json
+++ b/src/settings.json
@@ -14,5 +14,9 @@
             "/#/test",
             "/src/views/test/test.view"
         ]
+    },
+    "locales": {
+        "en": "./src/locales/en.locale.json",
+        "est": "./src/locales/est.locale.json"
     }
 }
