--- a/src/settings.json
+++ b/src/settings.json
@@ -1,10 +1,10 @@
 {
     "components": {
         "u-app": "/src/app/app",
+        "u-card": "/src/components/card/card.component",
         "u-footer": "/src/components/footer/footer.component",
         "u-header": "/src/components/header/header.component",
-        "u-retro-wave": "/src/components/main/retro-wave/retro-wave.component",
-        "u-test": "/src/components/test/test.component"
+        "u-retro-wave": "/src/components/main/retro-wave/retro-wave.component"
     },
     "views": {
         "Main": [
