--- a/src/settings.json
+++ b/src/settings.json
@@ -4,7 +4,8 @@
         "u-card": "/src/components/card/card.component",
         "u-footer": "/src/components/footer/footer.component",
         "u-header": "/src/components/header/header.component",
-        "u-retro-wave": "/src/components/main/retro-wave/retro-wave.component"
+        "u-retro-wave": "/src/components/main/retro-wave/retro-wave.component",
+        "u-scroll-anim": "/src/components/scroll-anim/scroll-anim.component"
     },
     "views": {
         "Main": [
