--- a/src/settings.json
+++ b/src/settings.json
@@ -2,6 +2,7 @@
     "components": {
         "u-app": "/src/app/app",
         "u-card": "/src/components/card/card.component",
+        "u-form": "/src/components/faq/form/form.component",
         "u-footer": "/src/components/footer/footer.component",
         "u-header": "/src/components/header/header.component",
         "u-retro-wave": "/src/components/main/retro-wave/retro-wave.component",
@@ -12,13 +13,13 @@
             "/#/about",
             "/src/views/about/about.view"
         ],
+        "Faq": [
+            "/#/faq",
+            "/src/views/faq/faq.view"
+        ],
         "Main": [
             "/#/",
             "/src/views/main/main.view"
-        ],
-        "Q&A": [
-            "/#/q&a",
-            "/src/views/q&a/q&a.view"
         ]
     },
     "locales": {
