--- a/src/settings.json
+++ b/src/settings.json
@@ -1,25 +1,25 @@
 {
     "components": {
-        "u-app": "/src/app/app",
-        "u-card": "/src/components/card/card.component",
-        "u-form": "/src/components/faq/form/form.component",
-        "u-footer": "/src/components/footer/footer.component",
-        "u-header": "/src/components/header/header.component",
-        "u-retro-wave": "/src/components/main/retro-wave/retro-wave.component",
-        "u-scroll-anim": "/src/components/scroll-anim/scroll-anim.component"
+        "u-app": "./src/app/app",
+        "u-card": "./src/components/card/card.component",
+        "u-form": "./src/components/faq/form/form.component",
+        "u-footer": "./src/components/footer/footer.component",
+        "u-header": "./src/components/header/header.component",
+        "u-retro-wave": "./src/components/main/retro-wave/retro-wave.component",
+        "u-scroll-anim": "./src/components/scroll-anim/scroll-anim.component"
     },
     "views": {
         "About": [
             "/#/about",
-            "/src/views/about/about.view"
+            "./src/views/about/about.view"
         ],
         "Faq": [
             "/#/faq",
-            "/src/views/faq/faq.view"
+            "./src/views/faq/faq.view"
         ],
         "Main": [
             "/#/",
-            "/src/views/main/main.view"
+            "./src/views/main/main.view"
         ]
     },
     "locales": {
